# multiTrip_multiVisit

./: .gitignore  Cargo.toml  setup.cfg
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/: dependabot.yml
.github/workflows/: compare-dell-amico-2020.yml  compare-ptds-ddss-multi-route.yml  compare-ptds-ddss.yml  compare-saleu-2022.yml  lint.yml  reevaluate-endurance.yml  run.yml  uavsupplies.yml
problems/config_parameter/: drone_endurance_config.json  drone_linear_config.json  drone_nonlinear_config.json  truck_config.json  uavsupplies.json
problems/data/: 1000.10.1.txt  1000.10.2.txt  1000.10.3.txt  1000.10.4.txt  1000.20.1.txt  1000.20.2.txt  1000.20.3.txt  1000.20.4.txt  1000.30.1.txt  1000.30.2.txt  1000.30.3.txt  1000.30.4.txt  1000.40.1.txt  1000.40.2.txt  1000.40.3.txt  1000.40.4.txt  500.10.1.txt  500.10.2.txt  500.10.3.txt  500.10.4.txt  500.20.1.txt  500.20.2.txt  500.20.3.txt  500.20.4.txt  500.30.1.txt  500.30.2.txt  500.30.3.txt  500.30.4.txt  500.40.1.txt  500.40.2.txt  500.40.3.txt  500.40.4.txt
problems/milp/: result_10.10.1.json  result_10.10.2.json  result_10.10.3.json  result_10.10.4.json  result_10.20.1.json  result_10.20.2.json  result_10.20.3.json  result_10.20.4.json  result_10.5.1.json  result_10.5.2.json  result_10.5.3.json  result_10.5.4.json  result_12.10.1.json  result_12.10.2.json  result_12.10.3.json  result_12.10.4.json  result_12.20.1.json  (+38 more)
scripts/: dell-amico-2020-compare.py  dell-amico-2020.py  map.html  map.py  ptds-ddss-compare.py  ptds-ddss.py  reevaluate.py  saleu-2022-compare.py  saleu-2022.py  summary.py
(+80 files in other folders)
